tests/typing/faulty_assignment_c.sy
start :: fn do
    a: set.Set(int) = [2, 2]
end
// error: $Mismatch
